--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -1,7 +1,18 @@
-:root {
+* {
   --small-text: 14px;
   --medium-text: 16px;
   --big-text: 18px;
+  --text-color: #101113;
+  --line-color: #5E5E5E;
+  --background-color: #fefefe;
+}
+* ::-moz-selection {
+  color: var(--text-color);
+  background: #eefcde;
+}
+* ::selection {
+  color: var(--text-color);
+  background: #eefcde;
 }
 
 html {
@@ -10,12 +21,36 @@ html {
 }
 html body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #1f1f1f;
+  color: var(--text-color);
+  background: var(--background-color);
   margin: auto;
   width: 100%;
   height: 100%;
-  background: #fff;
   overflow: hidden;
+}
+html body img {
+  width: 30px;
+  height: 30px;
+}
+html body .hidden {
+  display: none;
+}
+html body .small-cursor {
+  position: fixed;
+  bottom: -20px;
+  right: -20px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 999;
+  background-color: none;
+  border: 1.5px solid var(--background-color);
+  mix-blend-mode: difference;
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
 }
 html body .medium-title {
   font-size: var(--medium-text);
@@ -25,14 +60,15 @@ html body .big-title {
   font-weight: normal;
 }
 html body .medium-form {
-  width: 200px;
+  width: 195px;
   height: 34px;
 }
 html body .big-form {
-  width: 450px;
+  width: 445px;
   height: 34px;
 }
 html body .medium-form, html body .big-form {
+  padding-left: 5px;
   font-size: var(--small-text);
   border: none;
   border-bottom: 1.5px solid #C0C0C0;
@@ -54,14 +90,52 @@ html body .help {
 }
 html body nav {
   width: 100%;
-  height: 97px;
-  background: white;
-  border-color: black;
+  background: var(--background-color);
+  border-color: var(--text-color);
 }
 html body nav #top-bar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 60px;
+  border-bottom: 1px solid var(--line-color);
+}
+html body nav #top-bar #burger {
+  width: 64px;
+  height: 60px;
+}
+html body nav #top-bar #burger #big-line {
+  position: absolute;
+  left: 60px;
+  width: 1px;
+  height: 100vh;
+  color: black;
+  background: black;
+}
+html body nav #top-bar #burger label {
+  cursor: pointer;
+  background: none;
+  border: none;
+  position: absolute;
+  top: 20px;
+  left: 19px;
+}
+html body nav #top-bar #burger label i {
+  display: block;
+  height: 2px;
+  background: var(--text-color);
+}
+html body nav #top-bar #burger label i:nth-child(1) {
+  width: 15px;
+}
+html body nav #top-bar #burger label i:nth-child(2) {
+  margin-top: 4px;
+  width: 24px;
+}
+html body nav #top-bar #burger label i:nth-child(3) {
+  margin-top: 4px;
+  margin-left: 9px;
+  width: 15px;
 }
 html body nav #top-bar #logo {
   display: -webkit-box;
@@ -75,16 +149,35 @@ html body nav #top-bar #logo {
       -ms-flex-align: center;
           align-items: center;
 }
-html body nav #nav-content {
-  display: contents;
-  list-style: none;
+html body nav #top-bar #signal {
+  width: 64px;
+  height: 60px;
+  border-left: 1px solid var(--line-color);
+}
+html body nav #top-bar #signal a {
+  position: absolute;
+  top: 12.5px;
+  right: 12.5px;
+}
+html body nav #side-bar {
+  width: 45px;
+  height: 100vh;
+  background: var(--background-color);
+  position: absolute;
+  top: 75px;
+  left: 15px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-html body nav #nav-content li a:hover {
+html body nav #side-bar a:hover {
   opacity: 0.7;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+}
+html body nav #side-bar a:last-child {
+  position: absolute;
+  bottom: 75px;
+  left: 0px;
 }
 html body main {
   display: -webkit-box;
@@ -98,6 +191,9 @@ html body main {
           align-items: center;
   margin-top: 75px;
 }
+html body main #post-url input {
+  margin-top: -8px;
+}
 html body main #login-data {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -105,14 +201,46 @@ html body main #login-data {
   padding-top: 15px;
 }
 html body main #login-data input {
-  margin-top: -10px;
+  margin-top: -8px;
 }
 html body main #login-data #password {
-  margin-left: 45px;
+  margin-left: 47px;
 }
 html body main #additional-settings {
   padding-top: 20px;
   padding-bottom: 20px;
+}
+html body main #additional-settings[open] summary ~ * {
+  -webkit-animation: sweep 0.3s ease-in-out;
+          animation: sweep 0.3s ease-in-out;
+}
+@-webkit-keyframes sweep {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-3px);
+            transform: translateY(-3px);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes sweep {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-3px);
+            transform: translateY(-3px);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 html body main #additional-settings #details {
   display: -webkit-box;
@@ -131,6 +259,9 @@ html body main #additional-settings #details .line {
   height: 1px;
   background: #C0C0C0;
 }
+html body main #additional-settings #details .line:last-child {
+  margin-right: 0.5px;
+}
 html body main #additional-settings #details #small-detail-title {
   width: 100%;
   font-size: 12px;
@@ -146,6 +277,10 @@ html body main #additional-settings #a-d-content {
 }
 html body main #additional-settings #a-d-content #save-local {
   padding-top: 6px;
+  cursor: pointer;
+}
+html body main #additional-settings #a-d-content #save-local input, html body main #additional-settings #a-d-content #save-local label {
+  cursor: pointer;
 }
 html body main #additional-settings #a-d-content #edit-comments {
   margin-left: 58px;
@@ -153,14 +288,15 @@ html body main #additional-settings #a-d-content #edit-comments {
 html body main #additional-settings #a-d-content #edit-comments #edit-button {
   width: 200px;
   height: 35px;
+  cursor: pointer;
   background: none;
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #additional-settings #a-d-content #edit-comments #edit-button:hover {
-  color: white;
-  background-color: black;
+  color: var(--background-color);
+  background-color: var(--text-color);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
@@ -174,18 +310,34 @@ html body main #start-stop {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 1px;
 }
 html body main #start-stop #start button, html body main #start-stop #stop button {
   width: 100px;
   height: 35px;
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
+  cursor: pointer;
 }
 html body main #start-stop #start-btn {
   margin-right: 30px;
   background: #CBFFD0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main #start-stop #start-btn:hover {
+  background: #c4f5c9;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 html body main #start-stop #stop-btn {
   margin-left: 30px;
   background: #ffcbcb;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main #start-stop #stop-btn:hover {
+  background: #f5c3c3;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 /*# sourceMappingURL=index.css.map */
