--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -1,7 +1,16 @@
-:root {
+* {
   --small-text: 14px;
   --medium-text: 16px;
   --big-text: 18px;
+
+  --text-color: #101113;
+  --line-color: #5E5E5E;
+  --background-color: #fefefe;
+
+  ::selection {
+    color: var(--text-color);
+    background: rgb(238, 252, 222);
+  }
 }
 
 html {
@@ -10,12 +19,37 @@ html {
   
   body {
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(31, 31, 31);
+    color: var(--text-color);
+    background: var(--background-color);
     margin: auto;
     width: 100%;
     height: 100%;
-    background: #fff;
     overflow: hidden;
+
+    img {
+      width: 30px;
+      height: 30px;
+    }
+    
+    .hidden {
+      display: none;
+    }
+
+    .small-cursor {
+      position: fixed;
+      bottom: -20px;
+      right: -20px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      pointer-events: none;
+      z-index: 999;
+      background-color: none;
+      border: 1.5px solid var(--background-color);
+      mix-blend-mode: difference;
+      transition-duration: 300ms;
+      transition-timing-function: ease-out;
+    }
     
     .medium-title {
       font-size: var(--medium-text);
@@ -26,15 +60,16 @@ html {
     }
     
     .medium-form {
-      width: 200px;
+      width: 195px;
       height: 34px;
     }
     .big-form {
-      width: 450px;
+      width: 445px;
       height: 34px;
     }
 
     .medium-form, .big-form {
+      padding-left: 5px;
       font-size: var(--small-text);
       border: none;
       border-bottom: 1.5px solid #C0C0C0;
@@ -56,28 +91,86 @@ html {
     
     nav {
       width: 100%;
-      height: 97px;
-      background: white;
-      border-color: black;
+      background: var(--background-color);
+      border-color: var(--text-color);
       #top-bar {
         display: flex;
+        height: 60px;
+        border-bottom: 1px solid var(--line-color);
+        #burger {
+          width: 64px;
+          height: 60px;
+          #big-line {
+            position: absolute;
+            left: 60px;
+            width: 1px;
+            height: 100vh;
+            color: black;
+            background: black;
+          }
+          label {
+            cursor: pointer;
+            background: none;
+            border: none;
+            position: absolute;
+            top: 20px;
+            left: 19px;
+            i {
+              display: block;
+              height: 2px;
+              background: var(--text-color);
+              &:nth-child(1) {
+                width: 15px;
+              }
+              &:nth-child(2) {
+                margin-top: 4px;
+                width: 24px;
+              }
+              &:nth-child(3) {
+                margin-top: 4px;
+                margin-left: 9px;
+                width: 15px;
+              }
+            }
+          }
+        }
         #logo {
           display: flex;
           width: 100%;
           justify-content: center;
           align-items: center;
         }
-      }
-      #nav-content {
-        display: contents;
-        list-style: none;
-        transition: .2s;
-        li a:hover {
-          opacity: .7;
-          transition: .2s;
+        #signal {
+          width: 64px;
+          height: 60px;
+          border-left: 1px solid var(--line-color);
+          a {
+            position: absolute;
+            top: 12.5px;
+            right: 12.5px;
+          }
         }
       }
-
+      #side-bar {
+        width: 45px;
+        height: 100vh;
+        background: var(--background-color);
+        position: absolute;
+        top: 75px;
+        left: 15px;
+        transition: .2s;
+        a {
+          &:hover {
+            opacity: .7;
+            transition: .2s;
+          }
+          &:last-child {
+            position: absolute;
+            bottom: 75px;
+            left: 0px;
+          }
+        } 
+      }
     }
     
     main {
@@ -85,19 +178,32 @@ html {
       justify-content: center;
       align-items: center;
       margin-top: 75px;
+      #post-url {
+        input {
+          margin-top: -8px;
+        }
+      }
       #login-data {
         display: flex;
         padding-top: 15px;
         input {
-          margin-top: -10px;
+          margin-top: -8px;
         }
         #password {
-          margin-left: 45px;
+          margin-left: 47px;
         }
       }
       #additional-settings {
         padding-top: 20px;
         padding-bottom: 20px;
+        &[open] summary ~ * {
+          animation: sweep .3s ease-in-out;
+        }
+        @keyframes sweep {
+          0%    { opacity: 0; transform: translateY(-3px) }
+          90%   { opacity: 1; }
+          100%  { transform: translateY(0) }
+        }
         #details {
           display: flex;
           justify-content: center;
@@ -107,6 +213,9 @@ html {
             width: 100%;
             height: 1px;
             background: #C0C0C0;
+            &:last-child {
+              margin-right: 0.5px; // Doesnt work
+            }
           }
           #small-detail-title {
             width: 100%;
@@ -121,18 +230,23 @@ html {
           padding-bottom: 15px;
           #save-local {
             padding-top: 6px;
+            cursor: pointer;
+            input, label {
+              cursor: pointer;
+            }
           }
           #edit-comments {
             margin-left: 58px;
             #edit-button {
               width: 200px;
               height: 35px;
+              cursor: pointer;
               background: none;
-              border: 1px solid black;
+              border: 1px solid var(--text-color);
               transition: .2s;
               &:hover {
-                color: white;
-                background-color: black;
+                color: var(--background-color);
+                background-color: var(--text-color);
                 transition: .2s;
               }
             }
@@ -143,18 +257,30 @@ html {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 1px;
         #start button, #stop button {
           width: 100px;
           height: 35px;
-          border: 1px solid black;
+          border: 1px solid var(--text-color);
+          cursor: pointer;
         }
         #start-btn {
           margin-right: 30px;
           background: #CBFFD0;
+          transition: .2s;
+          &:hover {
+            background: #c4f5c9;
+            transition: .2s;
+          }
         }
         #stop-btn {
           margin-left: 30px;
           background: #ffcbcb;
+          transition: .2s;
+          &:hover {
+            background: #f5c3c3;
+            transition: .2s;
+          }
         }
       }
     }
