--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -18,6 +18,7 @@
 html {
   width: 100vw;
   height: 100vh;
+  background: var(--background-color);
 }
 html body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -45,7 +46,7 @@ html body .small-cursor {
   pointer-events: none;
   z-index: 999;
   background-color: none;
-  border: 1.5px solid var(--background-color);
+  border: 1.5px solid white;
   mix-blend-mode: difference;
   -webkit-transition-duration: 300ms;
           transition-duration: 300ms;
@@ -90,7 +91,7 @@ html body .help {
 }
 html body nav {
   width: 100%;
-  background: var(--background-color);
+  background: white;
   border-color: var(--text-color);
 }
 html body nav #top-bar {
@@ -174,9 +175,9 @@ html body nav #side-bar a:hover {
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-html body nav #side-bar a:last-child {
+html body nav #side-bar #info {
   position: absolute;
-  bottom: 75px;
+  bottom: 90px;
   left: 0px;
 }
 html body main {
