--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -16,6 +16,7 @@
 html {
   width: 100vw;
   height: 100vh;
+  background: var(--background-color);
   
   body {
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -45,7 +46,7 @@ html {
       pointer-events: none;
       z-index: 999;
       background-color: none;
-      border: 1.5px solid var(--background-color);
+      border: 1.5px solid white;
       mix-blend-mode: difference;
       transition-duration: 300ms;
       transition-timing-function: ease-out;
@@ -91,7 +92,7 @@ html {
     
     nav {
       width: 100%;
-      background: var(--background-color);
+      background: white;
       border-color: var(--text-color);
       #top-bar {
         display: flex;
@@ -164,12 +165,12 @@ html {
             opacity: .7;
             transition: .2s;
           }
-          &:last-child {
-            position: absolute;
-            bottom: 75px;
-            left: 0px;
-          }
         } 
+        #info {
+          position: absolute;
+          bottom: 90px;
+          left: 0px;
+        }
       }
     }
     
