--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -42,11 +42,11 @@ html {
       right: -20px;
       width: 20px;
       height: 20px;
+      border: 1.5px solid white;
       border-radius: 50%;
       pointer-events: none;
       z-index: 999;
       background-color: none;
-      border: 1.5px solid white;
       mix-blend-mode: difference;
       transition-duration: 300ms;
       transition-timing-function: ease-out;
@@ -99,15 +99,23 @@ html {
         height: 60px;
         border-bottom: 1px solid var(--line-color);
         #burger {
-          width: 64px;
+          width: 67px;
           height: 60px;
           #big-line {
             position: absolute;
+            top: 61px;
+            left: 0px;
+            width: 1px;
+            height: calc(100vh - 61px);
+            background: var(--text-color);;
+            opacity: 0;
+          }
+          #small-line {
+            position: absolute;
             left: 60px;
             width: 1px;
-            height: 100vh;
-            color: black;
-            background: black;
+            height: 60px;
+            background: var(--text-color);;
           }
           label {
             cursor: pointer;
@@ -153,22 +161,25 @@ html {
         }
       }
       #side-bar {
+        opacity: 0;
         width: 45px;
         height: 100vh;
-        background: var(--background-color);
         position: absolute;
-        top: 75px;
-        left: 15px;
+        top: 60px;
+        left: -60px;
         transition: .2s;
         a {
           &:hover {
             opacity: .7;
             transition: .2s;
           }
+          img {
+            padding-top: 20px;
+          }
         } 
         #info {
           position: absolute;
-          bottom: 90px;
+          bottom: 80px;
           left: 0px;
         }
       }
