--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -68,7 +68,7 @@ html {
       left: 45%;
       width: 170px;
       height: 150px;
-      background: linear-gradient(90deg, rgba(196,245,201,1) 28%, rgba(196,232,245,1) 100%);
+      background: linear-gradient(90deg, rgb(250, 112, 154)28%, rgb(254, 225, 64) 100%);  // green: rgba(196,245,201,1), blue : rgba(196,232,245,1) 
       filter: blur(50px);
       border-radius: 50%;
       pointer-events: none;
