--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -7,15 +7,11 @@
   --background-color: #fefefe;
 }
 * ::-moz-selection {
-  color: var(--text-color);
   background: #eefcde;
-  text-shadow: 5px 5px #558ABB;
   text-decoration: underline overline #FF3028;
 }
 * ::selection {
-  color: var(--text-color);
   background: #eefcde;
-  text-shadow: 5px 5px #558ABB;
   -webkit-text-decoration: underline overline #FF3028;
           text-decoration: underline overline #FF3028;
 }
@@ -29,6 +25,8 @@ html body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--text-color);
   background: var(--background-color);
+  -webkit-text-decoration: underline overline transparent;
+          text-decoration: underline overline transparent;
   margin: auto;
   width: 100%;
   height: 100%;
@@ -38,18 +36,10 @@ html body img {
   width: 30px;
   height: 30px;
 }
-html body #top-bar, html body #side-bar, html body input, html body button {
+html body #top-bar, html body #side-bar {
   position: relative;
   z-index: 2;
   background-color: var(--background-color);
-}
-html body #details, html body #save-local, html body h2, html body img {
-  position: relative;
-  z-index: 3;
-}
-html body #big-title {
-  position: relative;
-  z-index: 1;
 }
 html body .hidden {
   display: none;
@@ -58,8 +48,19 @@ html body .hidden {
   0% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
+    border-radius: 50%;
+    width: 170px;
+    height: 150px;
+  }
+  50% {
+    border-radius: 40%;
+    width: 140px;
+    height: 120px;
   }
   100% {
+    border-radius: 50%;
+    width: 170px;
+    height: 150px;
     -webkit-transform: rotate(365deg);
             transform: rotate(365deg);
   }
@@ -68,8 +69,19 @@ html body .hidden {
   0% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
+    border-radius: 50%;
+    width: 170px;
+    height: 150px;
+  }
+  50% {
+    border-radius: 40%;
+    width: 140px;
+    height: 120px;
   }
   100% {
+    border-radius: 50%;
+    width: 170px;
+    height: 150px;
     -webkit-transform: rotate(365deg);
             transform: rotate(365deg);
   }
@@ -89,8 +101,8 @@ html body .small-cursor {
   pointer-events: none;
   -webkit-transition: 1s ease-out;
   transition: 1s ease-out;
-  -webkit-animation: round 10s ease-in-out infinite;
-          animation: round 10s ease-in-out infinite;
+  -webkit-animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+          animation: round 25s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
 }
 html body .medium-title {
   font-size: var(--medium-text);
@@ -241,6 +253,15 @@ html body main {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 75px;
+  margin-left: calc(50% - 275px);
+  padding-bottom: 20px;
+  width: 550px;
+  height: 420px;
+  -webkit-backdrop-filter: blur(75px);
+          backdrop-filter: blur(75px);
+  border-radius: 2px;
+  position: relative;
+  z-index: 3;
 }
 html body main #post-url input {
   margin-top: -8px;
