--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -22,7 +22,7 @@ html {
   background: var(--background-color);
 }
 html body {
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--text-color);
   background: var(--background-color);
   -webkit-text-decoration: underline overline transparent;
@@ -35,11 +35,6 @@ html body {
 html body img {
   width: 30px;
   height: 30px;
-}
-html body #top-bar, html body #side-bar {
-  position: relative;
-  z-index: 2;
-  background-color: var(--background-color);
 }
 html body .hidden {
   display: none;
@@ -139,92 +134,46 @@ html body .help {
   height: 12px;
   margin-left: 5px;
 }
+html body header #drag-region {
+  width: 100%;
+  height: 50px;
+  -ms-overflow-style: scrollbar;
+  -webkit-app-region: drag;
+  background-color: #F3F3F3;
+}
+html body header #drag-region #window-title {
+  position: relative;
+  top: 10px;
+  left: 10px;
+}
+html body header #drag-region #window-controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+html body header #drag-region #window-controls .button {
+  width: 48px;
+  height: 32px;
+}
+html body header #drag-region #window-controls .button img {
+  width: 16px;
+  height: 16px;
+}
 html body nav {
   width: 100%;
   border-color: var(--text-color);
 }
-html body nav #top-bar {
-  z-index: 3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 60px;
-  border-bottom: 1px solid var(--line-color);
-}
-html body nav #top-bar #burger {
-  width: 67px;
-  height: 60px;
-}
-html body nav #top-bar #burger #big-line {
-  position: absolute;
-  top: 61px;
-  left: 0px;
-  width: 1px;
-  height: calc(100vh - 61px);
-  background: var(--text-color);
-  opacity: 0;
-}
-html body nav #top-bar #burger #small-line {
-  position: absolute;
-  left: 60px;
-  width: 1px;
-  height: 60px;
-  background: var(--text-color);
-}
-html body nav #top-bar #burger label {
-  cursor: pointer;
-  background: none;
-  border: none;
-  position: absolute;
-  top: 20px;
-  left: 19px;
-}
-html body nav #top-bar #burger label i {
-  display: block;
-  height: 2px;
-  background: var(--text-color);
-}
-html body nav #top-bar #burger label i:nth-child(1) {
-  width: 15px;
-}
-html body nav #top-bar #burger label i:nth-child(2) {
-  margin-top: 4px;
-  width: 24px;
-}
-html body nav #top-bar #burger label i:nth-child(3) {
-  margin-top: 4px;
-  margin-left: 9px;
-  width: 15px;
-}
-html body nav #top-bar #logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-html body nav #top-bar #signal {
-  width: 64px;
-  height: 60px;
-  border-left: 1px solid var(--line-color);
-}
-html body nav #top-bar #signal a {
-  position: absolute;
-  top: 12.5px;
-  right: 12.5px;
-}
 html body nav #side-bar {
-  opacity: 0;
+  position: absolute;
+  z-index: 2;
+  background-color: var(--background-color);
   width: 60px;
   height: 100vh;
-  position: absolute;
   top: 60px;
-  left: -60px;
+  left: 60px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
@@ -237,7 +186,12 @@ html body nav #side-bar a img {
   padding-left: 15px;
   padding-top: 20px;
 }
-html body nav #side-bar #info {
+html body nav #side-bar #wifi {
+  position: absolute;
+  bottom: 140px;
+  left: 0px;
+}
+html body nav #side-bar #settings {
   position: absolute;
   bottom: 80px;
   left: 0px;
