--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -19,7 +19,7 @@ html {
   background: var(--background-color);
   
   body {
-    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--text-color);
     background: var(--background-color);
     text-decoration: underline overline transparent;
@@ -31,12 +31,6 @@ html {
     img {
       width: 30px;
       height: 30px;
-    }
-    
-    #top-bar, #side-bar {
-      position: relative;
-      z-index: 2;
-      background-color: var(--background-color);
     }
 
     .hidden {
@@ -119,83 +113,44 @@ html {
       margin-left: 5px;  
     }
     
-    nav {
+    header #drag-region {
       width: 100%;
-      border-color: var(--text-color);
-      #top-bar {
-        z-index: 3;
+      height: 50px;
+      -ms-overflow-style: scrollbar;
+      -webkit-app-region: drag;
+      background-color: #F3F3F3;
+      #window-title {
+        position: relative;
+        top: 10px;
+        left: 10px;
+      }
+      #window-controls {
         display: flex;
-        height: 60px;
-        border-bottom: 1px solid var(--line-color);
-        #burger {
-          width: 67px;
-          height: 60px;
-          #big-line {
-            position: absolute;
-            top: 61px;
-            left: 0px;
-            width: 1px;
-            height: calc(100vh - 61px);
-            background: var(--text-color);;
-            opacity: 0;
-          }
-          #small-line {
-            position: absolute;
-            left: 60px;
-            width: 1px;
-            height: 60px;
-            background: var(--text-color);;
-          }
-          label {
-            cursor: pointer;
-            background: none;
-            border: none;
-            position: absolute;
-            top: 20px;
-            left: 19px;
-            i {
-              display: block;
-              height: 2px;
-              background: var(--text-color);
-              &:nth-child(1) {
-                width: 15px;
-              }
-              &:nth-child(2) {
-                margin-top: 4px;
-                width: 24px;
-              }
-              &:nth-child(3) {
-                margin-top: 4px;
-                margin-left: 9px;
-                width: 15px;
-              }
-            }
-          }
-        }
-        #logo {
-          display: flex;
-          width: 100%;
-          justify-content: center;
-          align-items: center;
-        }
-        #signal {
-          width: 64px;
-          height: 60px;
-          border-left: 1px solid var(--line-color);
-          a {
-            position: absolute;
-            top: 12.5px;
-            right: 12.5px;
+        position: absolute;
+        top: 10px;
+        right: 0;
+        .button {
+          width: 48px;
+          height: 32px;
+          img {
+            width: 16px;
+            height: 16px;
           }
         }
       }
+    }
+
+    nav {
+      width: 100%;
+      border-color: var(--text-color);
       #side-bar {
-        opacity: 0;
+        position: absolute;
+        z-index: 2;
+        background-color: var(--background-color);
         width: 60px;
         height: 100vh;
-        position: absolute;
         top: 60px;
-        left: -60px;
+        left: 60px;
         transition: .2s;
         a {
           &:hover {
@@ -206,8 +161,13 @@ html {
             padding-left: 15px;
             padding-top: 20px;
           }
+        }
+        #wifi {
+          position: absolute;
+          bottom: 140px;
+          left: 0px;
         } 
-        #info {
+        #settings {
           position: absolute;
           bottom: 80px;
           left: 0px;
