--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -5,6 +5,7 @@
   --text-color: #101113;
   --line-color: #5E5E5E;
   --background-color: #fefefe;
+  --main-color: #F3F3F3;
 }
 * ::-moz-selection {
   background: #eefcde;
@@ -135,11 +136,14 @@ html body .help {
   margin-left: 5px;
 }
 html body header #drag-region {
+  position: absolute;
+  top: 0;
+  z-index: 5;
   width: 100%;
   height: 50px;
   -ms-overflow-style: scrollbar;
   -webkit-app-region: drag;
-  background-color: #F3F3F3;
+  background-color: var(--main-color);
 }
 html body header #drag-region #window-title {
   position: relative;
@@ -147,33 +151,50 @@ html body header #drag-region #window-title {
   left: 10px;
 }
 html body header #drag-region #window-controls {
+  -webkit-app-region: no-drag;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: absolute;
-  top: 10px;
+  top: 0;
   right: 0;
 }
 html body header #drag-region #window-controls .button {
-  width: 48px;
-  height: 32px;
+  width: 60px;
+  height: 50px;
+  border: none;
 }
 html body header #drag-region #window-controls .button img {
-  width: 16px;
-  height: 16px;
+  width: 12px;
+  height: 12px;
 }
-html body nav {
-  width: 100%;
-  border-color: var(--text-color);
+html body header #drag-region #window-controls #minBtn:hover, html body header #drag-region #window-controls #maxBtn:hover, html body header #drag-region #window-controls #restoreBtn:hover {
+  background-color: #cccccc;
+}
+html body header #drag-region #window-controls #closeBtn:hover {
+  background-color: #ff5959;
+}
+html body header #drag-region #window-controls #maxBtn {
+  display: none;
 }
 html body nav #side-bar {
   position: absolute;
   z-index: 2;
-  background-color: var(--background-color);
-  width: 60px;
+  background-color: var(--main-color);
+  width: 200px;
   height: 100vh;
-  top: 60px;
-  left: 60px;
+  top: 50px;
+  left: 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body nav #side-bar a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 20px;
+  color: var(--text-color);
+  text-decoration: none;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
@@ -182,14 +203,22 @@ html body nav #side-bar a:hover {
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+html body nav #side-bar a p {
+  position: absolute;
+  margin-top: 3px;
+  margin-left: 60px;
+}
 html body nav #side-bar a img {
   padding-left: 15px;
-  padding-top: 20px;
 }
 html body nav #side-bar #wifi {
   position: absolute;
   bottom: 140px;
   left: 0px;
+  width: 100%;
+  height: 50px;
+  color: #31aa31;
+  border-bottom: 1px solid black;
 }
 html body nav #side-bar #settings {
   position: absolute;
