--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -140,7 +140,7 @@ html body header #drag-region {
   top: 0;
   z-index: 5;
   width: 100%;
-  height: 50px;
+  height: 35px;
   -ms-overflow-style: scrollbar;
   -webkit-app-region: drag;
   background-color: var(--main-color);
@@ -149,6 +149,7 @@ html body header #drag-region #window-title {
   position: relative;
   top: 10px;
   left: 10px;
+  font-size: 14px;
 }
 html body header #drag-region #window-controls {
   -webkit-app-region: no-drag;
@@ -160,8 +161,8 @@ html body header #drag-region #window-controls {
   right: 0;
 }
 html body header #drag-region #window-controls .button {
-  width: 60px;
-  height: 50px;
+  width: 50px;
+  height: 35px;
   border: none;
 }
 html body header #drag-region #window-controls .button img {
@@ -183,7 +184,7 @@ html body nav #side-bar {
   background-color: var(--main-color);
   width: 200px;
   height: 100vh;
-  top: 50px;
+  top: 35px;
   left: 0;
   -webkit-transition: 0.2s;
   transition: 0.2s;
