--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -121,7 +121,7 @@ html {
         top: 0;
         z-index: 5;
         width: 100%;
-        height: 50px;
+        height: 35px;
         -ms-overflow-style: scrollbar;
         -webkit-app-region: drag;
         background-color: var(--main-color);
@@ -129,6 +129,7 @@ html {
           position: relative;
           top: 10px;
           left: 10px;
+          font-size: 14px;
         }
         #window-controls {
           -webkit-app-region: no-drag;
@@ -137,8 +138,8 @@ html {
           top: 0;
           right: 0;
           .button {
-            width: 60px;
-            height: 50px;
+            width: 50px;
+            height: 35px;
             border: none;
             img {
               width: 12px;
@@ -167,7 +168,7 @@ html {
         background-color: var(--main-color);
         width: 200px;
         height: 100vh;
-        top: 50px;
+        top: 35px;
         left: 0;
         transition: .2s;
         a {
